add the entry form

--- a/src/components/card/card.scss
+++ b/src/components/card/card.scss
@@ -1,8 +1,7 @@
-.BackgroundCard{
+.background-card {
     width: 700;
     max-width:1000;
     min-width: 475;
     height: 350;
-    margin-left: 150;
-
+    margin-left: 250;
 }
