--- a/src/components/home-page/home.scss
+++ b/src/components/home-page/home.scss
@@ -1,6 +1,6 @@
 .Home{
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
     width:100%;
     height:100%;
