--- a/src/components/home-page/home.scss
+++ b/src/components/home-page/home.scss
@@ -1,7 +1,15 @@
 .Home{
     display: flex;
-    flex-direction: column;
+
+    
     justify-content: center;
+    margin:auto;
     width:100%;
     height:100%;
+}
+.title{
+    display :flex;
+    flex-direction:column;
+    justify-content:center;
+
 }
