--- a/src/components/expense-detail/expense-detail.scss
+++ b/src/components/expense-detail/expense-detail.scss
@@ -1,4 +1,4 @@
-.flex-expense-detail{
+.flex-expense-detail-form{
     display:flex;
     
     flex-direction: column;
@@ -23,4 +23,5 @@
 .flex-expense-detail-button{
     display:flex;
     justify-content: center;
+    margin-top:20px;
 }
