--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,7 +1,7 @@
 .kx-header__title{
     font-family: 'Pacifico', cursive;
     font-size:25px;
-    color:rgb(17, 199, 190);
+   // color:rgb(17, 199, 190);
     text-decoration-color: none;
     font-weight:normal;
 }
