--- a/src/components/new-entry-page/new-entry-page.scss
+++ b/src/components/new-entry-page/new-entry-page.scss
@@ -3,3 +3,23 @@
     flex-direction: row;
     justify-content: center,space-around;
 }
+#new-entry-page-name-tag{
+    display:inline-flex;
+    margin-top:1%;
+    margin-bottom:2%;
+    font-family: 'Gayathri';
+    color:#1a293e;
+    font-size: 40px;
+    font-weight:bold;
+    margin-left: 0%;
+
+   
+ 
+
+    
+    
+}
+.kx-card{
+    display:flex;
+
+}
