--- a/src/components/card/card.scss
+++ b/src/components/card/card.scss
@@ -1,15 +1,20 @@
 .card {
     display:flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: center;
     min-width:600px;
-    margin-top: 2%;
+    margin-top: 3%;
     min-height:250px;
+    align-items: center;
+    
 }
 .flex-container{
     display:flex;
     flex-direction: column;
     justify-content: center;
+    max-width: 100%;
+    max-height: 100%;
+    
 }
 .flex-button{
      
@@ -23,4 +28,10 @@
     color:white;
 
   
+}
+.content{
+    display:flex;
+    flex-direction:column;
+    justify-content: center;
+    align-items: center;
 }
