--- a/src/components/home-page/home.scss
+++ b/src/components/home-page/home.scss
@@ -1,15 +1,69 @@
 .Home{
     display: flex;
-
+  
+    
     
     justify-content: center;
-    margin:auto;
-    width:100%;
-    height:100%;
+    margin-top:8.5%;
+    max-width:100%;
+    max-height:100%;
+    flex-wrap: wrap;
+    
+    
 }
-.title{
+
+/*.title{
     display :flex;
     flex-direction:column;
-    justify-content:center;
+    justify-content:space-evenly;
+    margin-top:40%;
 
+}*/
+#logo{
+    display:inline-flex;
+    //justify-content: center;
+    margin-top: 20px;
+    font-family: 'Pacifico', cursive;
+    margin-bottom: 20px;
+    font-size: 50px;
+    
+    margin-bottom: 40px;
+    color:rgb(11, 179, 170);
+    
+}
+.Home-content-first{
+    font-family: 'Arsenal', sans-serif;
+    display: inline-flex;
+   // justify-content: space-between;
+    margin-top:20px;
+    margin-bottom: 1px;
+    font-size:50px;
+    font-weight: bold;
+    flex-wrap:wrap;
+    padding:05px;  
+    line-height:50px;
+    
+    
+    
+    
+}
+.Home-content-second{
+    font-family: 'Arsenal', sans-serif;
+    display: inline-flex;
+    //justify-content: space-between;
+    margin-top:30px;
+    margin-bottom: 40px;
+    font-size:30px;
+    //font-weight: bold;
+    flex-wrap: wrap;
+    padding:10px;
+    line-height:30px;
+    
+    
+
+}
+#highlight{
+    font-weight:bold;
+    margin-left:6px;
+    margin-right:6px;
 }
