--- a/src/components/nav-items/nav-item.scss
+++ b/src/components/nav-items/nav-item.scss
@@ -1,5 +1,5 @@
 .kx-tree__link__txt {
-    color:#521751;
+    color: #1a293e;
     text-decoration:none;
     font-size:1.2rem;
     font-family: 'Gayathri', sans-serif;
@@ -18,4 +18,6 @@
     display:flex;
     flex-direction:column;
     justify-content:center;
+    margin-top: 20px;
   }
+  
