--- a/src/components/upload-bills/upload-bills.scss
+++ b/src/components/upload-bills/upload-bills.scss
@@ -2,6 +2,7 @@
     display:flex;
     flex-direction:column;
     justify-content:space-around;
+    margin-top:3%;
 }
 .flex-upload-bills-form-button{
     display:flex;
