--- a/src/components/wizard-form/wizard-second-page/wizard-form-second-page.scss
+++ b/src/components/wizard-form/wizard-second-page/wizard-form-second-page.scss
@@ -1,4 +1,4 @@
-.flex-container-page-1{
+.flex-container-page-2{
     display:flex;
     flex-direction: column;
     align-items:center;
@@ -8,22 +8,29 @@
     padding:0;
 
 }
-.flex-KxCard-page-1{
-    align-items: center;
+.flex-KxCard-page-2{
+    display:flex;
+    flex-direction: column;
+    justify-content: flex-start;
 
+}
+.previous{
+    display:inline-flex;
+    justify-content: flex-start;
+    margin-bottom: 10px;
 }
 .flex-form-content-and-button{
     display:flex;
     flex-direction: column;
     justify-content: flex-start;
 }
-.flex-button-container-page-1{
-    display:flex;
+.flex-button-container-page-2{
+    display:inline-flex;
     margin-top:10px;
     margin-left:0;
     padding: 0;
 }
-.heading1{
+.heading2{
     display:inline-flex;
     margin-top:1%;
     margin-bottom:30px;
@@ -36,4 +43,11 @@
     font-family: 'Arsenal', sans-serif ;
 
    
+}
+#icon{
+    display:inline-flex;
+   margin-left: 15px;
+   color:black;
+    
+
 }
