--- a/src/components/wizard-form/wizard-third-page/wizard-form-third-page.scss
+++ b/src/components/wizard-form/wizard-third-page/wizard-form-third-page.scss
@@ -1,4 +1,4 @@
-.flex-container-page-1{
+.flex-container-page-3{
     display:flex;
     flex-direction: column;
     align-items:center;
@@ -8,7 +8,7 @@
     padding:0;
 
 }
-.flex-KxCard-page-1{
+.flex-KxCard-page-3{
     align-items: center;
 
 }
@@ -17,23 +17,37 @@
     flex-direction: column;
     justify-content: flex-start;
 }
-.flex-button-container-page-1{
+.flex-button-container-page-3{
     display:flex;
     margin-top:10px;
     margin-left:0;
     padding: 0;
 }
-.heading1{
+.heading3{
     display:inline-flex;
     margin-top:1%;
-    margin-bottom:30px;
+    margin-bottom:40px;
     //font-family: 'Gayathri';
-   // color:#1a293e;
-   color:black;
+    //color:#1a293e;
+    color:black;
     font-size: 35px;
    // font-weight:bold;
     margin-left: 0%;
     font-family: 'Arsenal', sans-serif ;
 
    
+}
+.flex-field-selector{
+    display:flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    margin-bottom:15px;;
+}
+.flex-field-department{
+    display:inline-flex;
+
+}
+.flex-field-division{
+    display:inline-flex;
+    margin-left:20px;
 }
