--- a/src/components/applications-view/applications-view.scss
+++ b/src/components/applications-view/applications-view.scss
@@ -5,7 +5,7 @@
   //font-family: 'Gayathri';
   color:#1a293e;
   font-size: 40px;
- // font-weight:bold;
+  font-weight:normal;
   margin-left: 0%;
   font-family: 'Arsenal', sans-serif ;
   }
