--- a/src/components/wizard-form/wizard-first-page/wizard-form-first-page.scss
+++ b/src/components/wizard-form/wizard-first-page/wizard-form-first-page.scss
@@ -18,11 +18,12 @@
     justify-content: flex-start;
 }
 .flex-button-container-page-1{
-    display:flex;
-    margin-top:10px;
-    margin-left:0;
-    padding: 0;
-}
+   
+        display:inline-flex;
+        margin-top:10px;
+     justify-content: center;
+        padding: 0;
+    }
 .heading1{
     display:inline-flex;
     margin-top:1%;
