--- a/src/components/wizard-form/wizard-second-page/wizard-form-second-page.scss
+++ b/src/components/wizard-form/wizard-second-page/wizard-form-second-page.scss
@@ -27,7 +27,7 @@
 .flex-button-container-page-2{
     display:inline-flex;
     margin-top:10px;
-    margin-left:0;
+ justify-content: center;
     padding: 0;
 }
 .heading2{
