--- a/src/components/wizard-form/wizard-third-page/wizard-form-third-page.scss
+++ b/src/components/wizard-form/wizard-third-page/wizard-form-third-page.scss
@@ -20,7 +20,7 @@
 .flex-button-container-page-3{
     display:flex;
     margin-top:10px;
-    margin-left:0;
+   justify-content: center;
     padding: 0;
 }
 .heading3{
