avatar is added

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -34,8 +34,9 @@
     opacity:1;
 }
 .kx-header__tools{
-    display: flexbox;
+    display: flex;
     flex-direction: row;
     justify-content: space-between;
     margin-top: 20px;
+   margin-right:20px;
 }
