--- a/src/components/wizard-form/wizard-first-page/wizard-form-first-page.scss
+++ b/src/components/wizard-form/wizard-first-page/wizard-form-first-page.scss
@@ -5,17 +5,23 @@
     justify-content: flex-start;
     max-width: 100%;
     max-height:100%;
+ 
+  
     padding:0;
 
 }
 .flex-KxCard-page-1{
     align-items: center;
 
+
+  
 }
 .flex-form-content-and-button{
     display:flex;
     flex-direction: column;
     justify-content: flex-start;
+    min-height:460px;
+    margin-top:20%;
 }
 .flex-button-container-page-1{
    
