--- a/src/components/wizard-form/wizard-second-page/wizard-form-second-page.scss
+++ b/src/components/wizard-form/wizard-second-page/wizard-form-second-page.scss
@@ -10,8 +10,11 @@
 }
 .flex-KxCard-page-2{
     display:flex;
+
     flex-direction: column;
     justify-content: flex-start;
+//  height:1000;
+
 
 }
 .previous{
@@ -26,7 +29,7 @@
 }
 .flex-button-container-page-2{
     display:inline-flex;
-    margin-top:10px;
+    margin-top:20px;
  justify-content: center;
     padding: 0;
 }
@@ -50,4 +53,12 @@
    color:black;
     
 
+}
+.datepicker-box{
+    display:flex;
+    width:350px;
+}
+.datepicker-container{
+    margin-top: 10px;
+    width:300px;
 }
