--- a/src/components/wizard-form/wizard-first-page/wizard-form-first-page.scss
+++ b/src/components/wizard-form/wizard-first-page/wizard-form-first-page.scss
@@ -20,10 +20,10 @@
     display:flex;
     flex-direction: column;
     justify-content: flex-start;
-    min-height:460px;
+    min-height:490px;
     margin-top:20%;
 }
-.flex-button-container-page-1{
+.flex-button-container-page-1 {
    
         display:inline-flex;
         margin-top:10px;
@@ -36,11 +36,25 @@
     margin-bottom:30px;
     //font-family: 'Gayathri';
    // color:#1a293e;
-   color:black;
+   color:whitesmoke;
     font-size: 35px;
    // font-weight:bold;
     margin-left: 0%;
     font-family: 'Arsenal', sans-serif ;
-
+    background-image: url('../image/tag.png');
+    background-size: 400px 200px;
+    background-repeat: no-repeat;
+    clip-path: inset(0% 0%  10% 0% round  25px  0px );
+   padding-top :10px;
+   padding-left:30px;
+   padding-right:30px;
+   padding-bottom:20px;
    
+}
+.flex-form-content{
+    display:flex;
+    flex-direction: column;
+    align-content: center;
+    margin-left: 40px;
+    margin-bottom: 20px;
 }
