--- a/src/components/wizard-form/wizard-second-page/wizard-form-second-page.scss
+++ b/src/components/wizard-form/wizard-second-page/wizard-form-second-page.scss
@@ -25,7 +25,7 @@
 .flex-form-content-and-button{
     display:flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: center;
 }
 .flex-button-container-page-2{
     display:inline-flex;
@@ -39,18 +39,27 @@
     margin-bottom:30px;
     //font-family: 'Gayathri';
    // color:#1a293e;
-   color:black;
+   color:whitesmoke;
     font-size: 35px;
    // font-weight:bold;
     margin-left: 0%;
     font-family: 'Arsenal', sans-serif ;
+    background-image: url('../image/tag.png');
+    background-size: 400px 200px;
+    background-repeat: no-repeat;
+    clip-path: inset(0% 0%  10% 0% round  25px  0px );
+   padding-top :10px;
+   padding-left:30px;
+   padding-right:30px;
+   padding-bottom:20px;
+   
 
    
 }
 #icon{
     display:inline-flex;
    margin-left: 15px;
-   color:black;
+   color:whitesmoke;
     
 
 }
@@ -61,4 +70,5 @@
 .datepicker-container{
     margin-top: 10px;
     width:300px;
+    margin-left: 17%;
 }
