--- a/src/containers/app/App.scss
+++ b/src/containers/app/App.scss
@@ -11,3 +11,8 @@
     transition: all 0.3s ease;
     margin-left: 0px;
 }
+.kx-page__canvas{
+    background-image: url('../../components/wizard-form/image/Background.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+}
