--- a/src/components/card/card.scss
+++ b/src/components/card/card.scss
@@ -2,10 +2,12 @@
     display:flex;
     flex-direction: column;
     justify-content: center;
-    min-width:600px;
+ 
+    // width:500px;
     margin-top: 3%;
     min-height:250px;
     align-items: center;
+   
     
 }
 .flex-container{
@@ -14,6 +16,9 @@
     justify-content: center;
     max-width: 100%;
     max-height: 100%;
+      width:550px;
+      flex-wrap:wrap;
+      flex-shrink: 2;
     
 }
 .flex-button{
